Fixed some mobile layout issues.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,13 +3,11 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 $neon-green: #bfd730;
 
 %vertical-align {
-	@media (min-width: 768px) {
-		position: relative;
-		top: 50%;
-		-webkit-transform: translateY(-50%);
-		-ms-transform: translateY(-50%);
-		transform: translateY(-50%);
-	}
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
 
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
